pp2/samples/bad7.out

*** Error line 12.
  betsy = New(Cow, true);
                 ^
*** parse error

